# rag_project

./: pyproject.toml
api/: query.py  upload.py
app/: config.py  main.py
schemas/: request_response.py
services/: document_loader.py  llm_service.py
utils/: file_utils.py
